syntax = "proto3";

package stockpulse;

option java_package = "com.stockpulse.grpc";
option java_outer_classname = "StockServiceProto";
option java_multiple_files = true;

service StockService {
  rpc GetStockPrice (StockRequest) returns (StockResponse);
  rpc StreamStockPrices (StockRequest) returns (stream StockResponse);
  rpc SetPriceAlert (PriceAlertRequest) returns (PriceAlertResponse);
}

message StockRequest {
  string symbol = 1;
}

message StockResponse {
  string symbol = 1;
  double price = 2;
  string timestamp = 3;
}

message PriceAlertRequest {
  string symbol = 1;
  double target_price = 2;
  AlertType alert_type = 3;
  string user_id = 4;
}

message PriceAlertResponse {
  string alert_id = 1;
  string status = 2;
}

enum AlertType {
  ABOVE = 0;
  BELOW = 1;
} 